--- a/ai/pfp.html
+++ b/ai/pfp.html
@@ -199,7 +199,7 @@
         <p>connor33341 2024</p>
     </div>
     <script type="module">
-        let NegativePrompt = "low res, blurry,less digit,bad anatomy,extra digit,distorted"//distorted
+        let NegativePrompt = "low res, blurry,less digit,bad anatomy,extra digit"//distorted
         const W = 1.5
         let ImageUrl = ""
         let ImageData
