--- a/mc/tools/map.html
+++ b/mc/tools/map.html
@@ -7,129 +7,11 @@
     <link rel="stylesheet" href="https://connor33341.github.io/static/css/mc.css">
     <link rel="stylesheet" href="https://connor33341.github.io/static/css/particles.css">
     <script src="https://connor33341.github.io/static/js/darkmode.js"></script>
-    <script src="https://connor33341.github.io/statuc/particles/particles.js"></script>
-    <!--<style>
-        :root {
-            --bg-color: #f9f9f9;
-            --text-color: #333;
-            --container-bg: #fff;
-            --link-color: #007BFF;
-            --shadow-color: rgba(0, 0, 0, 0.1);
-        }
-
-        [data-theme="dark"] {
-            --bg-color: #121212;
-            --text-color: #f9f9f9;
-            --container-bg: #1e1e1e;
-            --link-color: #4aa3ff;
-            --shadow-color: rgba(0, 0, 0, 0.4);
-        }
-
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-        }
-
-        .top-bar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: var(--container-bg);
-            padding: 10px 20px;
-            box-shadow: 0 4px 10px var(--shadow-color);
-        }
-
-        .top-bar a {
-            text-decoration: none;
-            color: var(--link-color);
-            margin: 0 10px;
-            font-weight: bold;
-        }
-
-        .top-bar a:hover {
-            text-decoration: underline;
-        }
-
-        .dark-mode-toggle {
-            cursor: pointer;
-            background: none;
-            border: 1px solid var(--link-color);
-            border-radius: 8px;
-            padding: 5px 10px;
-            color: var(--link-color);
-            font-size: 0.9rem;
-            font-weight: bold;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background: var(--container-bg);
-            box-shadow: 0 4px 10px var(--shadow-color);
-            border-radius: 16px;
-            padding: 20px;
-            width: 90%;
-            max-width: 1200px;
-            margin: 20px auto;
-            flex: 1;
-        }
-
-        header {
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        iframe {
-            width: 100%;
-            height: 80vh;
-            border: none;
-            border-radius: 12px;
-        }
-
-        footer {
-            margin-top: 20px;
-            font-size: 0.9rem;
-        }
-
-        footer a {
-            color: var(--link-color);
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-    </style>-->
-    <!--<script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const darkModeToggle = document.getElementById('dark-mode-toggle');
-            const updateTheme = () => {
-                const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-                const currentTheme = localStorage.getItem('theme');
-                const theme = currentTheme || (prefersDark ? 'dark' : 'light');
-                document.documentElement.setAttribute('data-theme', theme);
-            };
-
-            darkModeToggle.addEventListener('click', () => {
-                const currentTheme = document.documentElement.getAttribute('data-theme');
-                const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-                document.documentElement.setAttribute('data-theme', newTheme);
-                localStorage.setItem('theme', newTheme);
-            });
-
-            updateTheme();
-        });
-    </script>-->
+    <script src="https://connor33341.github.io/static/particles/particles.js"></script>
 </head>
 <body>
     <div id="particles-js"></div>
+    <div class="page">
     <div class="top-bar">
         <nav>
             <a href="#">Home</a>
@@ -144,6 +26,7 @@
         <footer>
             Powered by Blue Maps | <a href="https://example.com" target="_blank">Learn More</a> | ©2024 connor33341
         </footer>
+    </div>
     </div>
     <script>
         particlesJS.load('particles-js', 'https://connor33341.github.io/static/particles/particlesjs-config.json', function() {});
