--- a/mc/tools/map.html
+++ b/mc/tools/map.html
@@ -14,15 +14,15 @@
     <div class="page">
     <div class="top-bar">
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
+            <a href="https://connor33341.github.io">Home</a>
+            <a href="https://connor33341.github.io/mc">About - MC</a>
             <a href="#">Contact</a>
         </nav>
         <button id="dark-mode-toggle" class="dark-mode-toggle">Toggle Dark Mode</button>
     </div>
     <div class="container">
         <header>connor33341/mc</header>
-        <iframe src="http://account-opponents.gl.at.ply.gg:51357/#world:-18:244:17:444:0:0:0:1:flat" title="Embedded Content"></iframe>
+        <iframe src="https://proxy.connor33341.workers.dev/?proxy=http://account-opponents.gl.at.ply.gg:51357/#world:-18:244:17:444:0:0:0:1:flat" title="Embedded Content"></iframe>
         <footer>
             Powered by Blue Maps | <a href="https://example.com" target="_blank">Learn More</a> | ©2024 connor33341
         </footer>
