--- a/mc/tools/map.html
+++ b/mc/tools/map.html
@@ -22,7 +22,7 @@
     </div>
     <div class="container">
         <header>connor33341/mc</header>
-        <iframe src="http://account-opponents.gl.at.ply.gg:51357/#world:-18:244:17:444:0:0:0:1:flat" title="Embedded Content"></iframe>
+        <iframe src="http://account-opponents.gl.at.ply.gg:51357/#world:-18:244:17:444:0:0:0:1:flat" title="Embedded Content" allow="allow-scripts"></iframe>
         <footer>
             Powered by Blue Maps | <a href="https://example.com" target="_blank">Learn More</a> | ©2024 connor33341
         </footer>
