--- a/mc/index.html
+++ b/mc/index.html
@@ -10,13 +10,7 @@
     <script src="https://connor33341.github.io/static/js/darkmode.js"></script>
     <script src="https://connor33341.github.io/static/particles/particles.js"></script>
     <style>
-        .stats{
-            border-width: 4px;
-            border-color: blueviolet;
-            border-style:outset;
-            padding: 15px;
-            border-radius: 2%;
-        }
+        
     </style>
 </head>
 
@@ -36,12 +30,22 @@
             <header>
                 <h1>Minecraft Server</h1>
             </header>
-            <div>
+            <div class="containercontent">
                 <div class="stats">
                     <h1>Editions: Bedrock and Java</h1>
                     <h1>ServerVersion: 1.21</h1>
                     <h1>ClientVersions: 1.12-1.21+</h1>
                 </div>
+                <br>
+                <p>A random minecraft server hosted for some of my friends, anyone is welcome to play. The server is an Anarchy server, meaning the use of hacked clients, and any other method to gain an advantage is allowed.</p>
+                <br>
+                <p style="padding-bottom: 15px">List of Addresses, please note that these addresses are randomly generated and are subject to change.</p>
+                <table class="infotable">
+                    <tr><th>Type</th><th>Address</th><th>Port</th></tr>
+                    <tr><td>Java Edition</td><td>we-developer.gl.joinmc.link</td><td>61790</td></tr>
+                    <tr><td>Bedrock Edition</td><td>japanese-extending.gl.at.ply.gg</td><td>4070</td></tr>
+                    <tr><td>Server Map</td><td><a href="http://account-opponents.gl.at.ply.gg:51357/#world:1511:0:1390:7587:0:0:0:1:flat">account-opponents.gl.at.ply.gg</a></td><td>51357</td></tr>
+                </table>
                 <br>
                 <p></p>
             </div>
