--- a/mc/index.html
+++ b/mc/index.html
@@ -10,7 +10,36 @@
     <script src="https://connor33341.github.io/static/js/darkmode.js"></script>
     <script src="https://connor33341.github.io/static/particles/particles.js"></script>
     <style>
-        
+        .stats{
+            border-width: 4px;
+            border-color: var(--border-color);
+            border-style:outset;
+            padding: 15px;
+            border-radius: 1%;
+            font-size: larger;
+            text-align: center;
+        }
+        .containercontent{
+            max-width: 50%;
+        }
+        th, td{
+            padding-left: 25px;
+        }
+        th{
+            padding-bottom: 25px;
+            color: var(--link-color);
+        }
+        td{
+            padding-bottom: 10px;
+        }
+        table, th, td{
+            border-width: 4px;
+            border-color: var(--border-color);
+            border-style:outset;
+            border-radius: 1%;
+            padding: 15px;
+            border-collapse: collapse;
+        }
     </style>
 </head>
 
