--- a/v2/index.html
+++ b/v2/index.html
@@ -1,47 +1,120 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>connor_33341</title>
-    <link rel="icon" href="/static/icons/mainicon.ico">
-    <link rel="stylesheet" href="/static/css/main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>connor33341.github.io | Homepage</title>
+    <meta name="description" content="Homepage of connor33341">
+    <link rel="stylesheet" href="https://connor33341.github.io/static/css/mc.css">
+    <link rel="stylesheet" href="https://connor33341.github.io/static/css/particles.css">
     <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css">
-    <script src="/static/redirect.js"></script>
-    <script src="/static/particles/particles.js"></script>
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
+    <script src="https://connor33341.github.io/static/js/darkmode.js"></script>
+    <script src="https://connor33341.github.io/static/particles/particles.js"></script>
+    <!--<script type="module" src="https://connor33341.github.io/static/js/serverStatus.js"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <style>
+        .stats{
+            border-width: 4px;
+            border-color: var(--border-color);
+            border-style:outset;
+            padding: 15px;
+            border-radius: 1%;
+            font-size: larger;
+            text-align: center;
+        }
+        .containercontent{
+            max-width: 50%;
+        }
+        th, td{
+            padding-left: 25px;
+        }
+        th{
+            padding-bottom: 25px;
+            color: var(--link-color);
+        }
+        td{
+            padding-bottom: 10px;
+        }
+        table, th, td{
+            border-width: 4px;
+            border-color: var(--border-color);
+            border-style:outset;
+            border-radius: 1%;
+            padding: 15px;
+            border-collapse: collapse;
+        }
+        .btncontainer {
+            border-width: 2px;
+            border-color: var(--border-color);
+            /*border-style: outset;*/
+            border-style: solid;
+            border-radius: 20px;
+            box-shadow: 0 4px 10px var(--shadow-color);
+            align-items: center;
+            padding: 15px;
+            margin: 12px auto;
+            max-width: fit-content;
+        }
+        .selectionbtn{
+            background-color: var(--bg-color);
+            color: var(--link-color);
+            border-style: solid;
+            border-radius: 20px;
+        }
+    </style>
 </head>
+
 <body>
     <div id="particles-js"></div>
-    <div class="card">
-        <h1>connor_33341</h1>
-        <noscript><strong>This page requires Java Script, most function will not work</strong></noscript>
-        <h2>I make random stuff</h2>
-	    <h3>Website Inactive <a href="/info.html">Info</a></h3>
-        <div id="Buttons"></div>
+    <div class="page">
+        <div class="top-bar">
+            <nav>
+                <a href="https://connor33341.github.io">Home</a>
+                <a href="./about/index.html">About</a>
+                <a href="https://connor33341.github.io/v2/software">Software</a>
+                <a href="https://connor33341.github.io/mc/">Minecraft</a>
+                <a href="#">Contact</a>
+            </nav>
+            <button id="dark-mode-toggle" class="dark-mode-toggle">Toggle Dark Mode</button>
+        </div>
+        <div class="container">
+            <header>
+                <h1>connor33341.github.io</h1>
+            </header>
+            <div class="containercontent">
+                <h3>Website is inactive as of 2022</h3>
+                <div class="btncontainer">
+                    <button class="selectionbtn" aria-label="Test" data-balloon-pos="up">AI</button>
+                    <button class="selectionbtn">Software</button>
+                    <button class="selectionbtn">Minecraft</button>
+                    <button class="selectionbtn">Games</button>
+                </div>
+            </div>
+            <footer>
+                ©2024 connor33341
+            </footer>
+        </div>
     </div>
     <script>
-        const Buttons = document.getElementById("Buttons")
-        const ButtonsArray = [["Products","/products","Find sofrware from 3D engines to JS librarys"],["Tools","/tools","Find useful tools that help you get stuff done"],["Databases","","Not public yet"],["AI","/info.html","Not on website yet"]]
-        function WriteGrid(){
-            for (let index in ButtonsArray){
-                var object = ButtonsArray[index]
-                var Name = object[0]
-                var LinkHref = object[1]
-                var tip = object[2]
-                let Button = document.createElement("button")
-                Button.setAttribute("aria-label", tip)
-                Button.setAttribute("data-balloon-pos", "up")
-		Button.innerText = Name
-		Button.setAttribute("href", LinkHref)
-                Buttons.appendChild(Button)
-                Button.addEventListener("click", () => {
-                    console.log(LinkHref)
-                    Redirect(Button.href)
-                })
-            }
-        }
-        WriteGrid()
+        let Config = {}
+        $(document).ready(function(){
+            $.ajax({
+                type:"GET",
+                url:"https://connor33341.github.io/static/config/homepage.json",
+                dataType: "json",
+                success: function (Data){
+                    const Buttons = Data["buttons"]
+                    console.log(Buttons)
+                }
+            })
+        })
     </script>
     <script>
-        particlesJS.load('particles-js', '/static/particles/particlesjs-config.json', function() {});
+        particlesJS.load('particles-js', 'https://connor33341.github.io/static/particles/particlesjs-config.json', function () { });
     </script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
 </body>
+
 </html>
