--- a/v2/index.html
+++ b/v2/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://connor33341.github.io/static/css/particles.css">
     <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css">
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
-    <script src="https://connor33341.github.io/static/js/darkmode.js"></script>
+    <!--<script src="https://connor33341.github.io/static/js/darkmode.js"></script>-->
     <script src="https://connor33341.github.io/static/particles/particles.js"></script>
     <!--<script type="module" src="https://connor33341.github.io/static/js/serverStatus.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -70,15 +70,15 @@
 <body>
     <div id="particles-js"></div>
     <div class="page">
-        <div class="top-bar">
-            <nav>
+        <div class="top-bar" id="top">
+            <!--<nav>
                 <a href="https://connor33341.github.io">Home</a>
                 <a href="./about/index.html">About</a>
                 <a href="https://connor33341.github.io/v2/software">Software</a>
                 <a href="https://connor33341.github.io/mc/">Minecraft</a>
                 <a href="#">Contact</a>
             </nav>
-            <button id="dark-mode-toggle" class="dark-mode-toggle">Toggle Dark Mode</button>
+            <button id="dark-mode-toggle" class="dark-mode-toggle">Toggle Dark Mode</button>-->
         </div>
         <div class="container">
             <header>
@@ -101,6 +101,7 @@
     <script>
         let Config = {}
         $(document).ready(function(){
+            $("#top").load("https://connor33341.github.io/static/modules/navbar.html")
             $.ajax({
                 type:"GET",
                 url:"https://connor33341.github.io/static/config/homepage.json",
