--- a/v2/index.html
+++ b/v2/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://connor33341.github.io/static/css/particles.css">
     <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css">
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
-    <!--<script src="https://connor33341.github.io/static/js/darkmode.js"></script>-->
+    <script src="https://connor33341.github.io/static/js/darkmode.js"></script>
     <script src="https://connor33341.github.io/static/particles/particles.js"></script>
     <!--<script type="module" src="https://connor33341.github.io/static/js/serverStatus.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -63,6 +63,7 @@
             color: var(--link-color);
             border-style: solid;
             border-radius: 20px;
+            margin: 2.5px;
         }
     </style>
 </head>
@@ -137,6 +138,9 @@
                 }
             })
         })
+    </script>
+    <script>
+        dmInit();
     </script>
     <script>
         particlesJS.load('particles-js', 'https://connor33341.github.io/static/particles/particlesjs-config.json', function () { });
