--- a/static/modules/navbar.html
+++ b/static/modules/navbar.html
@@ -6,3 +6,4 @@
     <a href="#">Contact</a>
 </nav>
 <button id="dark-mode-toggle" class="dark-mode-toggle">Toggle Dark Mode</button>
+<script>dmInit()</script>
