--- a/v2/index.html
+++ b/v2/index.html
@@ -7,79 +7,18 @@
     <title>connor33341.github.io | Homepage</title>
     <meta name="description" content="Homepage of connor33341">
     <link rel="stylesheet" href="https://connor33341.github.io/static/css/mc.css">
+    <link rel="stylesheet" href="https://connor33341.github.io/static/css/mdrn.css">
     <link rel="stylesheet" href="https://connor33341.github.io/static/css/particles.css">
     <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css">
-    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
     <script src="https://connor33341.github.io/static/js/darkmode.js"></script>
     <script src="https://connor33341.github.io/static/particles/particles.js"></script>
-    <!--<script type="module" src="https://connor33341.github.io/static/js/serverStatus.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <style>
-        .stats{
-            border-width: 4px;
-            border-color: var(--border-color);
-            border-style:outset;
-            padding: 15px;
-            border-radius: 1%;
-            font-size: larger;
-            text-align: center;
-        }
-        .containercontent{
-            max-width: 50%;
-            align-content: center;
-        }
-        th, td{
-            padding-left: 25px;
-        }
-        th{
-            padding-bottom: 25px;
-            color: var(--link-color);
-        }
-        td{
-            padding-bottom: 10px;
-        }
-        table, th, td{
-            border-width: 4px;
-            border-color: var(--border-color);
-            border-style:outset;
-            border-radius: 1%;
-            padding: 15px;
-            border-collapse: collapse;
-        }
-        .btncontainer {
-            border-width: 2px;
-            border-color: var(--border-color);
-            /*border-style: outset;*/
-            border-style: solid;
-            border-radius: 20px;
-            box-shadow: 0 4px 10px var(--shadow-color);
-            align-items: center;
-            padding: 15px;
-            margin: 12px auto;
-            max-width: fit-content;
-        }
-        .selectionbtn{
-            background-color: var(--bg-color);
-            color: var(--link-color);
-            border-style: solid;
-            border-radius: 20px;
-            margin: 2.5px;
-        }
-    </style>
 </head>
 
 <body>
     <div id="particles-js"></div>
     <div class="page">
         <div class="top-bar" id="top">
-            <!--<nav>
-                <a href="https://connor33341.github.io">Home</a>
-                <a href="./about/index.html">About</a>
-                <a href="https://connor33341.github.io/v2/software">Software</a>
-                <a href="https://connor33341.github.io/mc/">Minecraft</a>
-                <a href="#">Contact</a>
-            </nav>
-            <button id="dark-mode-toggle" class="dark-mode-toggle">Toggle Dark Mode</button>-->
         </div>
         <div class="container">
             <header>
@@ -88,10 +27,6 @@
             <div class="containercontent">
                 <h3>Website is inactive as of 2022</h3>
                 <div class="btncontainer">
-                    <!--<button class="selectionbtn" aria-label="Test" data-balloon-pos="up">AI</button>
-                    <button class="selectionbtn">Software</button>
-                    <button class="selectionbtn">Minecraft</button>
-                    <button class="selectionbtn">Games</button>-->
                 </div>
             </div>
             <footer>
@@ -101,24 +36,24 @@
     </div>
     <script>
         let Config = {}
-        $(document).ready(function(){
-            $("#top").load("https://connor33341.github.io/static/modules/navbar.html", function(){
+        $(document).ready(function () {
+            $("#top").load("https://connor33341.github.io/static/modules/navbar.html", function () {
                 dmInit()
             })
             $.ajax({
-                type:"GET",
-                url:"https://connor33341.github.io/static/config/homepage.json",
+                type: "GET",
+                url: "https://connor33341.github.io/static/config/homepage.json",
                 dataType: "json",
-                success: function (Data){
+                success: function (Data) {
                     const Buttons = Data["buttons"]
-                    for (let i in Buttons){
+                    for (let i in Buttons) {
                         var Object = Buttons[i]
                         var Name = Object["name"]
                         var HREF = Object["href"]
                         var Popup = Object["popup"]
-                        var $Button = $("<button>",{
+                        var $Button = $("<button>", {
                             text: Name,
-                            class:"selectionbtn",
+                            class: "selectionbtn",
                             id: Name
                         })
                         $Button.attr({
@@ -128,14 +63,14 @@
                         })
                         console.log(Name)
                         $(".btncontainer").append($Button)
-                        $Button.on("click", (function(Name,HREF){
-                            return function (){
+                        $Button.on("click", (function (Name, HREF) {
+                            return function () {
                                 console.log()
                                 var BtnHREF = $(`#${Name}`).attr("href")
-                                console.log("DEST: "+BtnHREF)
+                                console.log("DEST: " + BtnHREF)
                                 location.href = BtnHREF
                             }
-                        })(Name,HREF))
+                        })(Name, HREF))
                     }
                 }
             })
@@ -144,7 +79,6 @@
     <script>
         particlesJS.load('particles-js', 'https://connor33341.github.io/static/particles/particlesjs-config.json', function () { });
     </script>
-    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
 </body>
 
 </html>
