--- a/ai/index.html
+++ b/ai/index.html
@@ -31,6 +31,7 @@
             </div>
             <footer>
                 ©2024 connor33341
+                Version 2.1.0
             </footer>
         </div>
     </div>
