--- a/v2/index.html
+++ b/v2/index.html
@@ -25,12 +25,14 @@
                 <h1>connor33341.github.io</h1>
             </header>
             <div class="containercontent">
-                <h3>Website is inactive as of 2022</h3>
+                <h3>Website is inactive as of 2021</h3>
+                <p>Alot of the website is inactive/unreachable from the menus. Many parts of the website are moved, no longer exist or just disappeared.</p>
                 <div class="btncontainer">
                 </div>
             </div>
             <footer>
-                ©2024 connor33341
+                ©2019 connor33341
+                Version 2.1.0
             </footer>
         </div>
     </div>
