--- a/v2/index.html
+++ b/v2/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>connor33341.github.io | Homepage</title>
     <meta name="description" content="Homepage of connor33341">
-    <link rel="stylesheet" href="https://connor33341.github.io/static/css/mc.css">
-    <link rel="stylesheet" href="https://connor33341.github.io/static/css/mdrn.css">
-    <link rel="stylesheet" href="https://connor33341.github.io/static/css/particles.css">
+    <link rel="stylesheet" href="https://connor33341.dev/static/css/mc.css">
+    <link rel="stylesheet" href="https://connor33341.dev/static/css/mdrn.css">
+    <link rel="stylesheet" href="https://connor33341.dev/static/css/particles.css">
     <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css">
-    <script src="https://connor33341.github.io/static/js/darkmode.js"></script>
-    <script src="https://connor33341.github.io/static/particles/particles.js"></script>
+    <script src="https://connor33341.dev/static/js/darkmode.js"></script>
+    <script src="https://connor33341.dev/static/particles/particles.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
@@ -22,7 +22,7 @@
         </div>
         <div class="container">
             <header>
-                <h1>connor33341.github.io</h1>
+                <h1>connor33341.dev</h1>
             </header>
             <div class="containercontent">
                 <h3>Website is inactive as of 2021</h3>
@@ -39,12 +39,12 @@
     <script>
         let Config = {}
         $(document).ready(function () {
-            $("#top").load("https://connor33341.github.io/static/modules/navbar.html", function () {
+            $("#top").load("https://connor33341.dev/static/modules/navbar.html", function () {
                 dmInit()
             })
             $.ajax({
                 type: "GET",
-                url: "https://connor33341.github.io/static/config/homepage.json",
+                url: "https://connor33341.dev/static/config/homepage.json",
                 dataType: "json",
                 success: function (Data) {
                     const Buttons = Data["buttons"]
