--- a/404.html
+++ b/404.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!--https://legacy.connor33341.dev-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>connor33341.github.io | 404</title>
     <meta name="description" content="Homepage of connor33341">
-    <link rel="stylesheet" href="https://connor33341.github.io/static/css/mc.css">
-    <link rel="stylesheet" href="https://connor33341.github.io/static/css/mdrn.css">
-    <link rel="stylesheet" href="https://connor33341.github.io/static/css/particles.css">
+    <link rel="stylesheet" href="https://legacy.connor33341.dev/static/css/mc.css">
+    <link rel="stylesheet" href="https://legacy.connor33341.dev/static/css/mdrn.css">
+    <link rel="stylesheet" href="https://legacy.connor33341.dev/static/css/particles.css">
     <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css">
-    <script src="https://connor33341.github.io/static/js/darkmode.js"></script>
-    <script src="https://connor33341.github.io/static/particles/particles.js"></script>
+    <script src="https://legacy.connor33341.dev/static/js/darkmode.js"></script>
+    <script src="https://legacy.connor33341.dev/static/particles/particles.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <style>
         .top-bar{
@@ -43,20 +43,20 @@
         </div>
     </div>
     <div class="card">
-        <h1><a href="https://connor33341.github.io">404-Not Found</a></h1>
+        <h1><a href="https://legacy.connor33341.dev">404-Not Found</a></h1>
         <h2>The page you requested does not exist</h2>
 	    <p>The page may exist just under another URL, alot of this stuff is broken or abandonend in place</p>
     </div>
     <script>
         let Config = {}
         $(document).ready(function () {
-            $("#top").load("https://connor33341.github.io/static/modules/navbar.html", function () {
+            $("#top").load("https://legacy.connor33341.dev/static/modules/navbar.html", function () {
                 dmInit()
             })
         })
     </script>
     <script>
-        particlesJS.load('particles-js', 'https://connor33341.github.io/static/particles/particlesjs-config.json', function () { });
+        particlesJS.load('particles-js', 'https://legacy.connor33341.dev/static/particles/particlesjs-config.json', function () { });
     </script>
 </body>
 
