--- a/ai/index.html
+++ b/ai/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>connor33341.github.io | AI</title>
     <meta name="description" content="Homepage of connor33341">
-    <link rel="stylesheet" href="https://connor33341.github.io/static/css/mc.css">
-    <link rel="stylesheet" href="https://connor33341.github.io/static/css/mdrn.css">
-    <link rel="stylesheet" href="https://connor33341.github.io/static/css/particles.css">
+    <link rel="stylesheet" href="https://legacy.connor33341.dev/static/css/mc.css">
+    <link rel="stylesheet" href="https://legacy.connor33341.dev/static/css/mdrn.css">
+    <link rel="stylesheet" href="https://legacy.connor33341.dev/static/css/particles.css">
     <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css">
-    <script src="https://connor33341.github.io/static/js/darkmode.js"></script>
-    <script src="https://connor33341.github.io/static/particles/particles.js"></script>
+    <script src="https://legacy.connor33341.dev/static/js/darkmode.js"></script>
+    <script src="https://legacy.connor33341.dev/static/particles/particles.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
@@ -38,12 +38,12 @@
     <script>
         let Config = {}
         $(document).ready(function () {
-            $("#top").load("https://connor33341.github.io/static/modules/navbar.html", function () {
+            $("#top").load("https://legacy.connor33341.dev/static/modules/navbar.html", function () {
                 dmInit()
             })
             $.ajax({
                 type: "GET",
-                url: "https://connor33341.github.io/static/config/ai.json",
+                url: "https://legacy.connor33341.dev/static/config/ai.json",
                 dataType: "json",
                 success: function (Data) {
                     const Buttons = Data["buttons"]
@@ -78,7 +78,7 @@
         })
     </script>
     <script>
-        particlesJS.load('particles-js', 'https://connor33341.github.io/static/particles/particlesjs-config.json', function () { });
+        particlesJS.load('particles-js', 'https://legacy.connor33341.dev/static/particles/particlesjs-config.json', function () { });
     </script>
 </body>
 
