--- a/ai/pfp.html
+++ b/ai/pfp.html
@@ -28,7 +28,7 @@
         <div class="container-fluid">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="https://connor33341.github.io">Home</a>
+                    <a class="nav-link active" href="https://legacy.connor33341.dev">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#SharedLink" id="share">Share</a>
