--- a/mc/index.html
+++ b/mc/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map</title>
-    <link rel="stylesheet" href="https://connor33341.github.io/static/css/mc.css">
-    <link rel="stylesheet" href="https://connor33341.github.io/static/css/particles.css">
-    <script src="https://connor33341.github.io/static/js/darkmode.js"></script>
-    <script src="https://connor33341.github.io/static/particles/particles.js"></script>
-    <script type="module" src="https://connor33341.github.io/static/js/serverStatus.js"></script>
+    <link rel="stylesheet" href="https://legacy.connor33341.dev/static/css/mc.css">
+    <link rel="stylesheet" href="https://legacy.connor33341.dev/static/css/particles.css">
+    <script src="https://legacy.connor33341.dev/static/js/darkmode.js"></script>
+    <script src="https://legacy.connor33341.dev/static/particles/particles.js"></script>
+    <script type="module" src="https://legacy.connor33341.dev/static/js/serverStatus.js"></script>
     <style>
         .stats{
             border-width: 4px;
@@ -49,9 +49,9 @@
     <div class="page">
         <div class="top-bar">
             <nav>
-                <a href="https://connor33341.github.io">Home</a>
-                <a href="https://connor33341.github.io/mc">About - MC</a>
-                <a href="https://connor33341.github.io/mc/tools/map.html">Map - MC</a>
+                <a href="https://legacy.connor33341.dev">Home</a>
+                <a href="https://legacy.connor33341.dev/mc">About - MC</a>
+                <a href="https://legacy.connor33341.dev/mc/tools/map.html">Map - MC</a>
                 <a href="#">Contact</a>
             </nav>
             <button id="dark-mode-toggle" class="dark-mode-toggle">Toggle Dark Mode</button>
@@ -85,10 +85,10 @@
         </div>
     </div>
     <script>
-        particlesJS.load('particles-js', 'https://connor33341.github.io/static/particles/particlesjs-config.json', function () { });
+        particlesJS.load('particles-js', 'https://legacy.connor33341.dev/static/particles/particlesjs-config.json', function () { });
     </script>
     <script type="module">
-        import {GetJavaStatus, GetBedrockStatus} from "https://connor33341.github.io/static/js/serverStatus.js"
+        import {GetJavaStatus, GetBedrockStatus} from "https://legacy.connor33341.dev/static/js/serverStatus.js"
         const JavaStatus = document.getElementById("javaServer")
         const JavaPlayers = document.getElementById("javaPlayers")
         const BedrockStatus = document.getElementById("bedrockServer")
