--- a/v2/index.html
+++ b/v2/index.html
@@ -79,7 +79,7 @@
         })
     </script>
     <script>
-        particlesJS.load('particles-js', 'https://connor33341.github.io/static/particles/particlesjs-config.json', function () { });
+        particlesJS.load('particles-js', 'https://connor33341.dev/static/particles/particlesjs-config.json', function () { });
     </script>
 </body>
 
