--- a/mc/index.html
+++ b/mc/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map</title>
-    <link rel="stylesheet" href="https://legacy.connor33341.dev/static/css/mc.css">
-    <link rel="stylesheet" href="https://legacy.connor33341.dev/static/css/particles.css">
-    <script src="https://legacy.connor33341.dev/static/js/darkmode.js"></script>
-    <script src="https://legacy.connor33341.dev/static/particles/particles.js"></script>
-    <script type="module" src="https://legacy.connor33341.dev/static/js/serverStatus.js"></script>
+    <link rel="stylesheet" href="https://connor33341.dev/static/css/mc.css">
+    <link rel="stylesheet" href="https://connor33341.dev/static/css/particles.css">
+    <script src="https://connor33341.dev/static/js/darkmode.js"></script>
+    <script src="https://connor33341.dev/static/particles/particles.js"></script>
+    <script type="module" src="https://connor33341.dev/static/js/serverStatus.js"></script>
     <style>
         .stats{
             border-width: 4px;
@@ -72,8 +72,8 @@
                 <p style="padding-bottom: 15px">List of Addresses, please note that these addresses are randomly generated and are subject to change. <a href="https://discord.gg/MyKAzXYrM9">Discord</a></p>
                 <table class="infotable">
                     <tr><th>Type</th><th>Address</th><th>Port</th><th>Online</th><th>Players Online</th></tr>
-                    <tr><td>Java Edition</td><td>we-developer.gl.joinmc.link</td><td>61790</td><td id="javaServer">Unknown</td><td id="javaPlayers"></td></tr>
-                    <tr><td>Bedrock Edition</td><td>japanese-extending.gl.at.ply.gg</td><td>4070</td><td id="bedrockServer">Unknown</td><td id="bedrockPlayers"></td></tr>
+                    <tr><td>Java Edition</td><td>mc.connor33341.dev</td><td>25566</td><td id="javaServer">True</td><td id="javaPlayers"></td></tr>
+                    <tr><td>Bedrock Edition</td><td>mc.connor33341.dev</td><td>19132</td><td id="bedrockServer">True</td><td id="bedrockPlayers"></td></tr>
                     <tr visable="false"><td>Server Map</td><td><a href="http://account-opponents.gl.at.ply.gg:51357/#world:1511:0:1390:7587:0:0:0:1:flat">account-opponents.gl.at.ply.gg</a></td><td>51357</td></tr>
                 </table>
                 <br>
@@ -85,16 +85,16 @@
         </div>
     </div>
     <script>
-        particlesJS.load('particles-js', 'https://legacy.connor33341.dev/static/particles/particlesjs-config.json', function () { });
+        particlesJS.load('particles-js', 'https://connor33341.dev/static/particles/particlesjs-config.json', function () { });
     </script>
     <script type="module">
-        import {GetJavaStatus, GetBedrockStatus} from "https://legacy.connor33341.dev/static/js/serverStatus.js"
+        import {GetJavaStatus, GetBedrockStatus} from "https://connor33341.dev/static/js/serverStatus.js"
         const JavaStatus = document.getElementById("javaServer")
         const JavaPlayers = document.getElementById("javaPlayers")
         const BedrockStatus = document.getElementById("bedrockServer")
         const BedrockPlayers = document.getElementById("bedrockPlayers")
         async function UpdateStatus(){
-            var jStatus,jPlayers = await GetJavaStatus("we-developer.gl.joinmc.link")
+            var jStatus,jPlayers = await GetJavaStatus("mc.connor33341.dev")
             JavaStatus.innerText = jStatus
             JavaPlayers.innerText = jPlayers
         }
