--- a/static/modules/navbar.html
+++ b/static/modules/navbar.html
@@ -1,5 +1,5 @@
 <nav>
-    <a href="https://connor33341.github.io">Home</a>
+    <a href="https://connor33341.dev">Home</a>
     <a href="./about/index.html">About</a>
     <a href="https://connor33341.github.io/v2/software">Software</a>
     <a href="https://connor33341.github.io/mc/">Minecraft</a>
