--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css">
     <script src="/Assets/redirect.js"></script>
     <script src="/Assets/particles.js"></script>
-    <meta http-equiv="refresh" content="0; url=https://connor33341.github.io/static/redirect/home.html">
+    <meta http-equiv="refresh" content="0; url=https://connor33341.dev/v2/">
     <style>
         #particles-js{
             width: 100vw;
