--- a/mc/index.html
+++ b/mc/index.html
@@ -49,8 +49,8 @@
     <div class="page">
         <div class="top-bar">
             <nav>
-                <a href="https://legacy.connor33341.dev">Home</a>
-                <a href="https://legacy.connor33341.dev/mc">About - MC</a>
+                <a href="https://connor33341.dev">Home</a>
+                <a href="https://connor33341.dev/mc">About - MC</a>
                 <a href="https://legacy.connor33341.dev/mc/tools/map.html">Map - MC</a>
                 <a href="#">Contact</a>
             </nav>
