--- a/v2/index.html
+++ b/v2/index.html
@@ -27,6 +27,7 @@
             <div class="containercontent">
                 <h3>Website is inactive as of 2021</h3>
                 <p>Alot of the website is inactive/unreachable from the menus. Many parts of the website are moved, no longer exist or just disappeared.</p>
+                <p>Also, with the recent move to connor33341.dev, alot of deps a broken</p>
                 <div class="btncontainer">
                 </div>
             </div>
