--- a/mc/tools/map.html
+++ b/mc/tools/map.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map</title>
-    <link rel="stylesheet" href="https://connor33341.github.io/static/css/mc.css">
-    <link rel="stylesheet" href="https://connor33341.github.io/static/css/particles.css">
-    <script src="https://connor33341.github.io/static/js/darkmode.js"></script>
-    <script src="https://connor33341.github.io/static/particles/particles.js"></script>
+    <link rel="stylesheet" href="https://connor33341.dev/static/css/mc.css">
+    <link rel="stylesheet" href="https://connor33341.dev/static/css/particles.css">
+    <script src="https://connor33341.dev/static/js/darkmode.js"></script>
+    <script src="https://connor33341.dev/static/particles/particles.js"></script>
 </head>
 <body>
     <div id="particles-js"></div>
@@ -22,14 +22,14 @@
     </div>
     <div class="container">
         <header>connor33341/mc</header>
-        <iframe src="http://account-opponents.gl.at.ply.gg:51357/#world:-18:244:17:444:0:0:0:1:flat" title="Embedded Content" allow="allow-scripts"></iframe>
+        <iframe src="https://map.connor33341.dev/" title="Embedded Content" allow="allow-scripts"></iframe>
         <footer>
             Powered by Blue Maps | <a href="https://example.com" target="_blank">Learn More</a> | ©2024 connor33341
         </footer>
     </div>
     </div>
     <script>
-        particlesJS.load('particles-js', 'https://connor33341.github.io/static/particles/particlesjs-config.json', function() {});
+        particlesJS.load('particles-js', 'https://connor33341.dev/static/particles/particlesjs-config.json', function() {});
     </script>
 </body>
 </html>
