--- a/mc/index.html
+++ b/mc/index.html
@@ -74,7 +74,7 @@
                     <tr><th>Type</th><th>Address</th><th>Port</th><th>Online</th><th>Players Online</th></tr>
                     <tr><td>Java Edition</td><td>mc.connor33341.dev</td><td>25566</td><td id="javaServer">True</td><td id="javaPlayers"></td></tr>
                     <tr><td>Bedrock Edition</td><td>mc.connor33341.dev</td><td>19132</td><td id="bedrockServer">True</td><td id="bedrockPlayers"></td></tr>
-                    <tr visable="false"><td>Server Map</td><td><a href="http://account-opponents.gl.at.ply.gg:51357/#world:1511:0:1390:7587:0:0:0:1:flat">account-opponents.gl.at.ply.gg</a></td><td>51357</td></tr>
+                    <tr visable="false"><td>Server Map</td><td><a href="https://map.connor33341.dev/">Blue Maps</a></td><td>51357</td></tr>
                 </table>
                 <br>
                 <p></p>
