--- a/mc/index.html
+++ b/mc/index.html
@@ -51,7 +51,7 @@
             <nav>
                 <a href="https://connor33341.dev">Home</a>
                 <a href="https://connor33341.dev/mc">About - MC</a>
-                <a href="https://legacy.connor33341.dev/mc/tools/map.html">Map - MC</a>
+                <a href="https://connor33341.dev/mc/tools/map.html">Map - MC</a>
                 <a href="#">Contact</a>
             </nav>
             <button id="dark-mode-toggle" class="dark-mode-toggle">Toggle Dark Mode</button>
@@ -74,7 +74,7 @@
                     <tr><th>Type</th><th>Address</th><th>Port</th><th>Online</th><th>Players Online</th></tr>
                     <tr><td>Java Edition</td><td>mc.connor33341.dev</td><td>25566</td><td id="javaServer">True</td><td id="javaPlayers"></td></tr>
                     <tr><td>Bedrock Edition</td><td>mc.connor33341.dev</td><td>19132</td><td id="bedrockServer">True</td><td id="bedrockPlayers"></td></tr>
-                    <tr visable="false"><td>Server Map</td><td><a href="https://map.connor33341.dev/">Blue Maps</a></td><td>51357</td></tr>
+                    <tr visable="false"><td>Server Map</td><td><a href="https://connor33341.dev/mc/tools/map.html">https://map.connor33341.dev/</a></td><td>51357</td></tr>
                 </table>
                 <br>
                 <p></p>
