--- a/static/modules/navbar.html
+++ b/static/modules/navbar.html
@@ -2,7 +2,7 @@
     <a href="https://connor33341.dev">Home</a>
     <a href="./about/index.html">About</a>
     <a href="https://connor33341.github.io/v2/software">Software</a>
-    <a href="https://connor33341.github.io/mc/">Minecraft</a>
+    <a href="https://minecraft.connor33341.dev/">Minecraft</a>
     <a href="#">Contact</a>
 </nav>
 <button id="dark-mode-toggle" class="dark-mode-toggle">Toggle Dark Mode</button>
