--- a/static/redirect/v3.html
+++ b/static/redirect/v3.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url=https://connor33341.github.io/v3">
+        <meta http-equiv="refresh" content="0; url=https://connor33341.dev/v3">
     </head>
 </html>
